Fixed spacing on mobile

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -258,12 +258,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 75vw;
     padding: 20px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin-bottom: 15px;
     position: fixed;
     margin: 0 auto;
 }
@@ -288,15 +287,19 @@ body {
 }
 
 .popup-wrapper form {
-    width: 80%;
+    width: 100%;
 }
 
 .popup-wrapper div {
-    margin-top: 5px;
+    margin-top: 15px;
+}
+
+.popup-wrapper > form > div > label {
+    color: rgb(0,0,0, 0.75);
 }
 
 .popup-wrapper form input {
-    width: 80%;
+    width: 100%;
     border-radius: 30px;
     border: solid gray 1px;
     padding: 5px;
